# transmission-rss

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-push.yml
src/: config_parser.py  database.py  filtering.py  main.py  seen.py
tests/: test_filtering.py
